[package]
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
readme = "README.md"
name = "drogue-bme680"
version = "0.2.2"
license = "BSD-3-Clause"
description = "A crate to interface with the BME680 environmental sensor"
repository = "https://github.com/drogue-iot/drogue-bme680"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std"]
keywords = ["driver", "bme680", "sensor", "no_std"]

[dependencies]

embedded-hal = "0.2"
embedded-time = "0.10"

drogue-embedded-timer = "0.2"

log = "0.4"

bitfield = "0.13"

env_logger = { version = "0.7", optional = true }

stm32f4 = { version = "0.11", features = ["stm32f411", "rt"], optional = true }
stm32f4xx-hal = { version = "0.8", features = ["stm32f411", "rt"], optional = true }
stm32f7 = { version = "0.11", features = ["stm32f7x3", "rt"], optional = true }
stm32f7xx-hal = { version = "0.2", features = ["stm32f723", "rt"], optional = true }

[features]

dump = []
env_logging = ["env_logger"]
stm32f4xx = ["stm32f4", "stm32f4xx-hal"]
stm32f7xx = ["stm32f7", "stm32f7xx-hal"]

[dev-dependencies]

rtt-target = { version = "0.2.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-logger = { version = "0.1" }

cortex-m = { version = "0.6" }
cortex-m-rt = { version = "0.6" }
cortex-m-rtic = "0.5"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
#stm32f7xx-hal = { path = "../stm32f7xx-hal" }
#stm32f7xx-hal = { git = "https://github.com/ctron/stm32f7xx-hal", branch = "feature/add_uart5_1" }

